# erponomics

./: .gitignore  README.md
manufacturing/: Cargo.toml  build.rs
manufacturing/admin/: Cargo.toml
manufacturing/db/: .env.template  Cargo.toml  build.rs
manufacturing/db/migrations/: 20241103202123_create_items_table.sql
manufacturing/db/proto/: items.proto
manufacturing/db/proto/item/: create_item_request.proto  create_item_response.proto  get_item_request.proto  get_item_response.proto  item.proto  item_id.proto  item_number.proto  item_service.proto
manufacturing/db/src/: grpc.rs
manufacturing/db/src/lib/: grpc.rs  item.rs  lib.rs  sqlx.rs  utils.rs
manufacturing/db/src/lib/domain/item/: ports.rs
manufacturing/db/src/lib/domain/item/models/: item.rs
manufacturing/db/src/lib/features/: items.rs
manufacturing/db/src/lib/features_legacy/: items.rs
manufacturing/db/src/lib/grpc/: item.rs
manufacturing/db/src/lib/inbound/: grpc.rs
manufacturing/db/src/lib/inbound/grpc/services/: item_service.rs
manufacturing/db/src/lib/item/: grpc_service.rs  sqlite_client.rs
manufacturing/db/src/lib/item/sqlite_client/: create_item.rs  delete_item.rs  get_item.rs
manufacturing/db/src/lib/outbound/: sqlite.rs
manufacturing/db/src/lib/sqlx/: sqlite.rs
manufacturing/db/src/lib/utils/: date_time_utc.rs
manufacturing/db/tests/: items_test.rs
manufacturing/domain/: Cargo.toml  build.rs
manufacturing/domain/proto/item/: item.proto
manufacturing/domain/proto/item/command/: create_item_request.proto  delete_item_request.proto  item_command_service.proto
manufacturing/domain/proto/item/query/: get_item_request.proto  get_item_response.proto  item_query_service.proto
manufacturing/domain/proto/item/repository/: item_command_service.proto  item_query_service.proto  item_service.proto  repository_create_item_request.proto  repository_delete_item_request.proto  repository_get_item_request.proto  repository_get_item_response.proto  repository_item_command_service.proto  repository_item_query_service.proto
manufacturing/domain/proto/item/sync/: item_sync_result.proto
manufacturing/domain/proto/primary_type/: code.proto  description.proto  id.proto  name.proto
manufacturing/domain/proto/sync/: command.proto  result.proto  status.proto  type.proto
manufacturing/domain/src/lib/: features.rs  grpc.rs  lib.rs  types.rs
manufacturing/domain/src/lib/features/: item.rs
manufacturing/domain/src/lib/features/item/: command.rs  grpc.rs  query.rs  repository.rs
manufacturing/domain/src/lib/features/item/command/: grpc.rs  service.rs
manufacturing/domain/src/lib/features/item/command/grpc/: create.rs  delete.rs
manufacturing/domain/src/lib/features/item/command/service/: create.rs  delete.rs
manufacturing/domain/src/lib/features/item/grpc/: error.rs  item.rs
manufacturing/domain/src/lib/features/item/grpc/error/: item.rs
manufacturing/domain/src/lib/features/item/query/: grpc.rs  service.rs
manufacturing/domain/src/lib/features/item/query/grpc/: get.rs
manufacturing/domain/src/lib/features/item/query/service/: get.rs
manufacturing/domain/src/lib/features/item/repository/: create.rs  delete.rs  get.rs  grpc.rs
manufacturing/domain/src/lib/features/item/repository/create/: error.rs  request.rs
manufacturing/domain/src/lib/features/item/repository/delete/: error.rs  request.rs
manufacturing/domain/src/lib/features/item/repository/get/: error.rs  response.rs
manufacturing/domain/src/lib/features/item/repository/grpc/: client.rs  command.rs  create.rs  delete.rs  get.rs  query.rs
manufacturing/domain/src/lib/features/item/repository/grpc/command/: create.rs  delete.rs
manufacturing/domain/src/lib/features/item/repository/grpc/command/create/: error.rs  request.rs
manufacturing/domain/src/lib/features/item/repository/grpc/command/delete/: error.rs  request.rs
manufacturing/domain/src/lib/features/item/repository/grpc/delete/: request.rs
manufacturing/domain/src/lib/features/item/repository/grpc/get/: error.rs  request.rs  response.rs
manufacturing/domain/src/lib/features/item/repository/grpc/query/: get.rs
manufacturing/domain/src/lib/features/item/repository/grpc/query/get/: request.rs  (+1 more)
manufacturing/domain/src/lib/types/: code.rs  description.rs  grpc.rs  id.rs  name.rs  timestamp.rs
manufacturing/domain/src/lib/types/grpc/: code.rs  description.rs  id.rs  name.rs
manufacturing/migrations/: 20241205194626_create_item_table.sql
manufacturing/proto/v1/item/: item.proto  item_command_service.proto  item_query_service.proto  item_sync_service.proto
manufacturing/proto/v1/production_order/: production_order.proto  production_order_command_service.proto  production_order_query_service.proto  production_order_repository_service.proto
manufacturing/query/: Cargo.toml
manufacturing/src/lib/: base.rs  core.rs  grpc.rs  lib.rs  sqlx.rs  sync.rs  type_system.rs
manufacturing/src/lib/base/: entity_tag.rs  grpc.rs  id.rs
manufacturing/src/lib/core/: item.rs  sync.rs
manufacturing/src/lib/core/item/: command.rs  grpc.rs  query.rs  repository.rs  sync.rs
manufacturing/src/lib/grpc/: base.rs  item.rs  status.rs  sync.rs  timestamp.rs
manufacturing/src/lib/grpc/core/: item.rs
manufacturing/src/lib/type_system/: entity_tag.rs  id.rs  timestamp.rs
manufacturing/src/lib/type_system/grpc/: id.rs
manufacturing/sync/: Cargo.toml
manufacturing/tests/: items_test.rs
manufacturing/v1/: item.proto  production_order.proto
manufacturing/v1/item/: item_command_service.proto  item_query_service.proto
manufacturing/v1/item/repository/: item_repository_command_service.proto  item_repository_query_service.proto
manufacturing/v1/item/sync/: item_sync_command.proto
manufacturing/v1/production_order/: production_order_command_service.proto  production_order_query_service.proto
manufacturing/v1/production_order/repository/: production_order_repository_command_service.proto  production_order_repository_query_service.proto
manufacturing/v1/sync/: command.proto  result.proto  status.proto  type.proto
manufacturing/web/: Cargo.toml
(+128 files in other folders)
