[workspace]
resolver = "2"
members = ["admin", "db", "domain", "query", "sync", "web"]

[workspace.package]
version = "0.1.0"
authors = ["azalhu"]
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.89", default-features = false, features = ["backtrace", "std"] }
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
derive-getters = { version = "0.5.0", default-features = false }
derive_more = { version = "1.0.0", default-features = false, features = ["display", "from"] }
prost = { version = "0.13.3", default-features = false, features = ["derive"] }
prost-types = { version = "0.13.3", default-features = false, features = ["std"] }
serde = { version = "1.0.210", default-features = false }
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = { version = "1.0.64", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", default-features = false, features = ["codegen", "prost", "transport"] }
tonic-build = { version = "0.12.3", default-features = false, features = ["prost", "transport"] }
tonic-reflection = { version = "0.12.3", default-features = false, features = ["server"] }
tonic-types = { version = "0.12.3", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
ulid = { version = "1.1.3", default-features = false, features = ["std"] }

[workspace.lints.rust]
unsafe_code = "forbid"
