[package]
name = "manufacturing"
version = "0.1.0"
authors = ["azalhu"]
edition = "2021"

[lib]
name = "manufacturing"
path = "src/lib/lib.rs"

[[bin]]
name = "manufacturing_server"
path = "src/bin/server/main.rs"

[dependencies]
anyhow = { version = "1.0.89", default-features = false, features = ["backtrace", "std"] }
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
derive-getters = { version = "0.5.0", default-features = false }
derive_more = { version = "1.0.0", default-features = false, features = ["deref", "display", "from"] }
etag = { version = "4.0.0", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
prost = { version = "0.13.3", default-features = false, features = ["derive"] }
prost-types = { version = "0.13.3", default-features = false, features = ["std"] }
serde = { version = "1.0.210", default-features = false }
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = { version = "1.0.64", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", default-features = false, features = ["codegen", "prost", "transport"] }
tonic-reflection = { version = "0.12.3", default-features = false, features = ["server"] }
tonic-types = { version = "0.12.3", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
uuid = { version = "1.11.0", default-features = false, features = ["v4"] }

[build-dependencies]
prost-build = { version = "0.13.4", default-features = false }
tonic-build = { version = "0.12.3", default-features = false, features = ["prost", "transport"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
dbg_macro = "forbid"
expect_used = "deny"
panic = "forbid"
todo = "forbid"
unwrap_used = "forbid"
