[package]
name = "db"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "db"
path = "src/lib/lib.rs"

[[bin]]
name = "db_server"
path = "src/bin/server/main.rs"

[dependencies]
anyhow = { version = "1.0.89", default-features = false, features = ["backtrace", "std"] }
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
derive_more = { version = "1.0.0", default-features = false, features = ["display", "from"] }
prost = { version = "0.13.3", default-features = false, features = ["derive"] }
prost-types = { version = "0.13.3", default-features = false, features = ["std"] }
serde = { version = "1.0.210", default-features = false }
sqlx = { version = "0.8.2", default-features = false, features = ["chrono", "macros", "sqlite"] }
thiserror = { version = "1.0.64", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", default-features = false, features = ["codegen", "prost", "transport"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
ulid = { version = "1.1.3", default-features = false, features = ["std"] }

[build-dependencies]
tonic-build = { version = "0.12.3", default-features = false, features = ["prost", "transport"] }
#tonic-build = { workspace = true }
