[package]
name = "db"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "db"
path = "src/lib/lib.rs"

[[bin]]
name = "db_server"
path = "src/bin/server/main.rs"

[dependencies]
domain = { path = "../domain" }
anyhow.workspace = true
chrono.workspace = true
derive-getters.workspace = true
derive_more.workspace = true
prost-types.workspace = true
sqlx.workspace = true
tonic.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[lints]
workspace = true
