[package]
name = "domain"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "manufacturing"
path = "src/lib/lib.rs"

[[bin]]
name = "manufacturing_core"
path = "src/bin/server/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
derive-getters.workspace = true
derive_more.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-types.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
